# heigvd-bachelor-thesis

./: .gitignore  README.md
drone-rl-environment/: README.md  evaluation_data-1000-20secs.csv  evaluation_data-20000-30secs.csv  pyproject.toml
drone-rl-environment/src/drone_rl_environment/: custom.py  map_test.py  reinforcement_learning_env.py  rl_utils.py  visualize_model.py
drone-rl-environment/src/drone_rl_environment/custom_environments/: Action.py  BaseRLSingleDroneEnv.py  FlyAwayCeilingEnv.py  FlyAwayEnv.py  FlyAwayTunnelEnv.py  FlyAwayTunnelWithObstaclesEnv.py
drone-rl-environment/src/drone_rl_environment/lidar/: LidarSensor.py
drone-rl-environment/src/drone_rl_environment/mapping/: map.py
drone-rl-environment/src/drone_rl_environment/scripts/: drone_actions_demo.py  evaluate_model.py  train_model.py  visualize_trained_model.py
simplified-drone-sim/: drone.py  main.py  pyproject.toml  simulation.py
simplified-drone-sim/sensors/: lidar.py
simplified-drone-sim/simplified-drone-sim/: DroneEnvironment.py  drone.py  main.py  main_interactive_sim.py  main_rl.py  open3d_slam_test.py  simulation.py  utils.py  visualize_trained_model.py  wall.py
simplified-drone-sim/simplified-drone-sim/sensors/: inertial_unit.py
simplified-drone-sim/simplified-drone-sim/src/: DroneEnvironment.py  Map.py  constants.py  drone.py  open3d_slam_simulation.py  simulation.py  slam copy.py  slam.py  slam2.py  wall.py
simplified-drone-sim/simplified-drone-sim/src/sensors/: inertial_unit.py  lidar.py
simplified-drone-sim/simplified-drone-sim/src/training/: VisualizeSimplifiedSimulationCallback.py
