[project]
name = "simplified-drone-sim"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Raynobrak",email = "lcs.charbonnier@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
