[project]
name = "simplified-drone-sim"
version = "0.1.0"
description = ""
authors = [
    {name = "Raynobrak",email = "lcs.charbonnier@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium (>=1.1.1,<2.0.0)",
    "stable-baselines3[extra] (>=2.6.0,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "kiss-icp (>=1.2.3,<2.0.0)",
    "open3d (>=0.19.0,<0.20.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
